[package]
name = "meliusgfx"
version = "0.1.0"
edition = "2018"
authors = ["PutterBeanut <putterbeanutdev@gmail.com>"]
description = "WIP OpenGL wrapper for Melius"
homepage = "https://github.com/putterbeanut/melius-gfx"
repository = "https://github.com/putterbeanut/melius-gfx"
keywords = ["melius"]
categories = ["graphics", "ui"]

[dependencies]
gl = "0.14.0"
image = "0.23.14"