[package]
name = "meliusgfx"
version = "0.1.1"
edition = "2018"
license = "Apache-2.0"
authors = ["PutterBeanut <putterbeanutdev@gmail.com>"]
description = "WIP OpenGL wrapper for Melius"
homepage = "https://github.com/putterbeanut/melius-gfx"
repository = "https://github.com/putterbeanut/melius-gfx"
keywords = ["melius"]
categories = ["graphics", "gui"]

[dependencies]
gl = "0.14.0"
glfw = "0.41.0"
image = "0.23.14"

[dependencies.cgmath]
git = "https://github.com/rustgd/cgmath.git"